--- a/preorder/complete.html
+++ b/preorder/complete.html
@@ -3,6 +3,7 @@
 <title>完成付费</title>
 <!-- <link rel="stylesheet" href="./css/style.css"> -->
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<script type="text/javascript" src="js/jquery.js"></script>
 <style type="text/css">
     body{
         padding: 0;
@@ -25,6 +26,11 @@
     bh_=document.getElementById("preorder").offsetHeight/2;
     document.getElementById("preorder").style.marginTop=bh-bh_+"px";
 }
+    $.get("http://wx.senselover.com/Auth/checkLogin", function(data){
+        if(data.status == 0){
+            window.location.href = data.url;
+        }
+    });
 
 </script>
 </html>
