--- a/lxxt/index.html
+++ b/lxxt/index.html
@@ -15,7 +15,15 @@
         width: 100%;
         /*height: 100%;*/
         background-color: #eeeeee;
+        background-image: url(./img/BGpc.jpg);
+        background-size:cover;
+        background-repeat: no-repeat;
     }
+    @media screen and (max-width: 415px) { 
+        body{
+            background-image: url(./img/BGmobile.jpg);
+        }
+    } 
     .pg-head {
         position: relative;
         top: 0;
@@ -23,11 +31,11 @@
         line-height: 40px;
         padding-top: 5px;
         padding-bottom: 5px;
-        background-color: #42a5f5;
+        background-color: rgba(255, 255, 255, 0.5);
     }
     #logo{
         height: 100px;
-        background-image: url(./img/logopc.png);        
+        background-image: url(./img/logopcblack.png);        
         background-repeat: no-repeat;
     }
     @media screen and (max-width: 415px) {
@@ -35,71 +43,85 @@
             height: 60px;
             width: 270px;
             margin: 0 auto;
-            background-image: url(./img/logomobile.png);        
+            background-image: url(./img/logomobileblack.png);        
             background-repeat: no-repeat;
         }
         .pg-head {
             height: 60px;
         }
     } 
-    #info{
-        width: 500px;
-        margin: 0 auto;
-        margin-top: 40px;
-        margin-bottom: 40px;
-        text-align: center;
-        height: 30px;
-        line-height: 30px;
-        border-radius: 5px;
-        border: 1px solid #b3b3b3;
-        color: #666666;
-    }
     .inf-main{
         width: 1200px;
         margin: 0 auto;
+        background-image: url(./img/BGpc.png);        
+        background-repeat: no-repeat;
     }
     @media screen and (max-width: 415px) {
-        #info{
-            width: 240px;
-            height: 60px;
-            margin: 0 auto;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
         .inf-main{
             width: 240px;
             margin: 0 auto;
+            background-image: url(./img/BGmobil.png);        
+            background-repeat: no-repeat;
         }
     } 
-    .checkblock{
-        width: 220px;
-        height: 170px;
-        float: left;
+    .login{
+        width: 300px;
+        height: 350px;
+        margin-top: 25px;
+        position: fixed;
+        right: 10px;
         margin-left: 10px;
         margin-right: 10px;
-        margin-top: 10px;
-        margin-bottom:10px; 
-        background-color: #fff;
-        box-shadow: 2px 2px 0px 0px #e6e6e6;
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.5);
     }
-    .checkhead{
-        width: 100%;
-        height: 30px;
-        background-color: #42a5f5;
-        line-height: 30px;
-        text-align: center;
+    @media screen and (max-width: 415px) {
+        .login{
+            position: fixed;
+            right: 0px;
+            width: 90%;
+            margin-left: 5%;
+            margin-right: 5%;
+            margin-top: 25px;
+            margin-bottom:10px; 
+        }
+    }
+    h1{
+        font-family: Microsoft Yahei;
+        font-weight: bold;
         font-size: 18px;
-        color: #fff;
-    }
-    .checkmain{
-        line-height: 60px;
         text-align: center;
-        font-size: 14px;
-        color: #666666;
+        color: #4d4d4d;
+        font-weight: lighter; 
+        margin-top: 20px;       
+    } 
+    input{
+        width: 80%;
+        margin-left: 10%;
+        margin-top: 15px;
+        text-align: center;
+        height: 38px;
+        border-radius: 7px;
+        border: none;
+        font-family: Microsoft Yahei;
     }
-    .checkimg{
-        margin-left: 80px;
-        margin-right: 80px;
+    .vericode{
+        width: 35%;
+        margin-left: 10%;
+        margin-top: 15px;
+        text-align: center;
+        float: left;
+        height: 38px;
+        border-radius: 7px;
+        border: none;
+        font-family: Microsoft Yahei;        
+    }
+    .links{    
+        position: fixed;
+        height: 50px;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.5);
+        top: 510px;
     }
     .pg-foot {
         position: absolute;
@@ -114,7 +136,7 @@
     }
     @media screen and (max-width: 415px) {
         .pg-foot {
-            position: relative;
+            /*position: relative;*/
             margin-top: 20px;
         }
     } 
@@ -124,82 +146,20 @@
     <div class="pg-head">
         <div id="logo"></div>
     </div>
-    <div id="info">
-        姓名：张海新&nbsp&nbsp|&nbsp&nbsp学号：201208070633&nbsp&nbsp|&nbsp&nbsp类别：本科生
-    </div>
     <div class="inf-main">
-        <div class="checkblock" id="c1">
-            <div class="checkhead">
-                学生资助管理中心
-            </div>
-            <div class="checkmain">
-                确认国家助学贷款还款手续
-                <img class="checkimg" src="./img/green.png">
-            </div>
+        <div class="login">
+        <h1>登 录</h1>
+            <form>
+                <input type="text" placeholder="学号">
+                <input type="password" placeholder="密码">
+                <img src="" class="vericode">
+                <input type="text" style="width: 35%;" placeholder="验证码">
+                <input type="submit" style="background-color: #00ff00;color: #4d4d4d;" value="登录" onclick="window.open(&quot;index2.html&quot;)">
+            </form>
         </div>
-        <div class="checkblock" id="c2">
-            <div class="checkhead">
-                计财处
-            </div>
-            <div class="checkmain">
-                清理学费、住宿费
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c3">
-            <div class="checkhead">
-                图书馆
-            </div>
-            <div class="checkmain">
-                清理图书
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c4">
-            <div class="checkhead">
-                园区管理办公室
-            </div>
-            <div class="checkmain">
-                清理家具、办理退宿手续
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c5">
-            <div class="checkhead">
-                校医院
-            </div>
-            <div class="checkmain">
-                毕业体检
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c6">
-            <div class="checkhead">
-                教材科
-            </div>
-            <div class="checkmain">
-                结算教材费
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c7">
-            <div class="checkhead">
-                实验室建设与设备管理处
-            </div>
-            <div class="checkmain">
-                清理绘算仪器
-                <img class="checkimg" src="./img/green.png">
-            </div>
-        </div>
-        <div class="checkblock" id="c7" style="float: right;">
-            <div class="checkhead" style="background-color: #00bfaa">
-                说明
-            </div>
-            <div class="checkmain" style="line-height: 25px;font-size: 12px;padding-top: 30px;">
-                “绿色”：表示满足该部门的离校要求<br/>“灰色”：表示未满足该部门的离校要求<br/>双击图标可以查看办理该项目的要求
-            </div>
-        </div>
-        <div style="clear:both"></div>
+    <div class="links">
+        
+    </div>
     </div>
     <div class="pg-foot">千年弦歌网络工作室</div>
     <script type="text/javascript">
